# alpaca-pyspark

./: .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  Debug Historical Bars DS.ipynb  Get Daily Bars.py  LICENSE  README.md  Simple DS.ipynb  Test Historical API.ipynb  Test Historical Bars API.ipynb  Test Historical Bars DS.ipynb  USAGE.md  alpaca_connector.py  alpaca_demo.ipynb  output.txt  pyproject.toml  requirements.txt  test_alpaca_connector.py
.github/workflows/: build.yml  claude-code-review.yml  lint.yml  publish.yml  test.yml
alpaca_pyspark/: __init__.py  bars.py  common.py  trades.py
alpaca_pyspark/corp_actions/: __init__.py  corporate_actions.py
alpaca_pyspark/crypto/: __init__.py
alpaca_pyspark/options/: README.md  __init__.py  bars.py  contracts.py
alpaca_pyspark/stocks/: README.md  __init__.py  bars.py  trades.py
notebooks/: .gitkeep  alpaca_demo.ipynb
src/: .gitkeep
tests/: .gitkeep  conftest.py  test_alpaca_connector.py
tests/fixtures/: mock_responses.py
tests/unit/: conftest.py  test_common.py  test_corporate_actions.py  test_options_contracts.py  test_schema_large_values.py
