[tool.poetry]
name = "alpaca-pyspark"
version = "0.1.0"
description = "Import market data from Alpaca-API with PySpark"
authors = ["Tristan Nixon <tristan.nixon@example.com>"]
readme = "README.md"
packages = [{include = "alpaca_pyspark"}]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
requests = "^2.31.0"
types-requests = "^2.31.0"
pyspark = "^4.0.0"
pyarrow = "^18.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
yapf = "^0.40.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.yapf]
based_on_style = "google"
column_limit = 120  # or whatever line length you prefer
indent_width = 4
dedent_closing_brackets = true  # closing bracket at opening indent level
coalesce_brackets = true  # avoid splitting brackets unnecessarily
split_before_first_argument = false  # allows args on same line as opening paren
split_before_logical_operator = true  # split before 'and'/'or' not after

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"