[tool.poetry]
name = "alpaca-pyspark"
version = "0.1.0"
description = "Import market data from Alpaca-API with PySpark"
authors = ["Tristan Nixon <tristan.nixon@example.com>"]
readme = "README.md"
packages = [{include = "alpaca_pyspark"}]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
requests = "^2.31.0"
types-requests = "^2.31.0"
pyspark = "^4.0.0"
pyarrow = "^20.0.0"
pyarrow-stubs = "^20.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
yapf = "^0.40.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.yapf]
based_on_style = "google"
column_limit = 120
indent_width = 4
dedent_closing_brackets = true
split_all_top_level_comma_separated_values = true
split_before_logical_operator = true
split_before_bitwise_operator = true
split_before_arithmetic_operator = true
split_before_named_assigns = true
split_before_dict_set_generator = true
split_before_expression_after_opening_paren = true  # Allow multi-line comprehensions
split_complex_comprehension = true
split_penalty_comprehension = 0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"